--- a/style/style.css
+++ b/style/style.css
@@ -53,6 +53,7 @@ main {
   flex-direction: row;
   height: 20%;
 }
+
 .search-input {
   height: 40%;
   width: 70%;
@@ -116,4 +117,130 @@ main {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
+}
+
+/* minha parte */
+.cart-products {
+  overflow-y: auto;
+  height: 300px;
+}
+
+.all-cards {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  gap: 10px;
+  height: 100%;
+}
+.filter-card {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  gap: 10px;
+  height: 100%;
+}
+
+.item-card {
+  display: flex;
+  flex-direction: column;
+  width: 250px;
+  border: 2px solid #F5F5F5;
+  margin: 0px 20px 0px 15px;
+}
+
+.item-card:hover {
+  border: 2px solid #2e245e;
+}
+
+.item-card img{
+  background-color: #F5F5F5;
+}
+
+.tag {
+  background-color: #2e245e;
+  color: #ffffff;
+  font-size: 10px;
+  padding: 5px;
+  width: 50px;
+  margin: 20px 0px 10px 10px;
+}
+
+.title {
+  font-size: 20px;
+  font-weight: bold;
+  margin: 0px 0px 0px 10px;
+}
+
+.resume {
+  font-size: 14px;
+  line-height: 1.5;
+  margin: 10px;
+}
+
+.value-item {
+  color: #37268C;
+  font-size: 14px;
+  font-weight: bold;
+  margin: 10px 0px 10px 10px;
+}
+
+.add-button {
+  border: none;
+  background-color: #ffffff;
+  margin: 0px;
+  padding: 10px;
+  width: 150px;
+  margin: 0px 0px 10px 0px;
+}
+.add-button:hover {
+  text-decoration: underline;
+  color: #37268C;
+}
+
+.cart-list li{
+  padding: 10px;
+  background-color: #F5F5F5;;
+  display: flex;
+  flex-direction: row;
+}
+
+.cart-list div {
+  padding: 5px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  gap: 10px;
+}
+.cart-list img{
+  background-color: #ffffff;
+  width: 90px;
+  padding: 10px;
+}
+
+.cart-list h4 {
+  font-size: 16px;
+  font-weight: bold;
+}
+
+.cart-list span {
+  color: #37268C;
+  font-size: 14px;
+  font-weight: bold;
+}
+
+.cart-list button {
+  font-size: 10px;
+  width: 100px;
+  border: none;
+  padding: 0;
+  background-color: transparent;
+}
+
+.cart-list button:hover {
+  text-decoration: underline;
+  color: #37268C;
+}
+
+.hide {
+  display: none;
 }
